# FFmpeg_4.2.2

./: .gitignore  README.md  build.gradle  settings.gradle
ffmpeg_cmd/: CMakeLists.txt  build.gradle  proguard-rules.pro
ffmpeg_cmd/src/androidTest/java/com/blplayer/jbl/blplayer/: ExampleInstrumentedTest.java
ffmpeg_cmd/src/main/: AndroidManifest.xml
ffmpeg_cmd/src/main/cpp/: DZAudio.cpp  DZAudio.h  DZConstDefine.h  DZFFmpeg.cpp  DZFFmpeg.h  DZJNICall.cpp  DZJNICall.h  DZPacketQueue.cpp  DZPacketQueue.h  DZPlayerStatus.cpp  DZPlayerStatus.h  audioplayer.c  cmdutils.c  config.h  ffmpeg.c  libffmpeginvoke.c  music-player.cpp  native-lib.c
ffmpeg_cmd/src/main/java/com/stormdzh/ffmpeg/sdk/audio/: AudioPlayer.java
ffmpeg_cmd/src/main/java/com/stormdzh/ffmpeg/sdk/sles/: DarrenPlayer.java
ffmpeg_cmd/src/main/java/com/stormdzh/ffmpeg/sdk/sles/listener/: MediaErrorListener.java  MediaPreparedListener.java
ffmpeg_cmd/src/main/java/com/stormdzh/ffmpeg/sdk/util/: FFmpegCommands.java  FFmpegRun.java  MediaUtils.java
ffmpeg_cmd/src/main/java/com/stormdzh/ffmpeg/sdk/util/entity/: MixAudioEntity.java
ffmpeg_cmd/src/test/java/com/blplayer/jbl/blplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
moudle_app/: build.gradle
moudle_app/src/main/: AndroidManifest.xml
moudle_app/src/main/java/com/stormdzh/ffmpeg/demo/: MainActivity.java
moudle_app/src/main/res/layout/: activity_main.xml
moudle_app/src/main/res/values/: strings.xml
